--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "next": "13.4.2",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.1",
     "typescript": "5.0.4"
   },
